[package]
name = "rosy"
version = "0.0.0"
authors = ["Nikolai Vazquez"]
edition = "2018"
description = "Ruby bindings for Rust."
license = "MIT/Apache-2.0"
keywords = ["ruby"]
categories = ["api-bindings"]
links = "ruby"
build = "build/mod.rs"
include = ["Cargo.toml", "**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[lib]
path = "src/lib.rs"

[build-dependencies]
aloxide = { version = "0.0.6", default-features = false }

# Used to enable `cfg(nightly)`
rustc_version = { version = "0.2", optional = true }

[features]
default = ["static"]
download = ["aloxide/download"]
static = []

# Conditionally enable functionality
ruby_2_6 = []

[package.metadata.docs.rs]
features = ["rustc_version", "ruby_2_6"]
