[package]
name = "rosy"
version = "0.0.8"
authors = ["Nikolai Vazquez"]
edition = "2018"
description = "Ruby bindings for Rust."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/oceanpkg/rosy"
repository = "https://github.com/oceanpkg/rosy"
documentation = "https://docs.rs/rosy"
keywords = ["ruby"]
categories = ["api-bindings"]
links = "ruby"
build = "build/mod.rs"
include = ["Cargo.toml", "**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[lib]
path = "src/lib.rs"

[dev-dependencies]
static_assertions = "0.3.0"

[build-dependencies]
aloxide = { version = "0.0.8", default-features = false }

# Used to enable `cfg(nightly)`
version_check = { version = "0.1", optional = true }

[features]
default = ["static"]
download = ["aloxide/download"]
static = []

# Conditionally enable functionality
ruby_2_6 = []

# Meant for getting docs to generate on docs.rs
_skip_linking = []

[package.metadata.docs.rs]
features = ["ruby_2_6", "version_check", "_skip_linking"]

[badges]
maintenance = { status = "actively-developed" }
